fix: dark mode selection and scrolling

--- a/other/workshop-app-styles.css
+++ b/other/workshop-app-styles.css
@@ -13,8 +13,6 @@ body {
 *::before,
 *::after {
   box-sizing: border-box;
-  /* for the theme change */
-  transition: background 0.4s, background-color 0.4s, border-color 0.4s;
 }
 
 /*
